#1 accept multiple receiver email ids

--- a/.github/workflows/check_apec_status.yml
+++ b/.github/workflows/check_apec_status.yml
@@ -1,5 +1,7 @@
 name: apec
-on: [push]
+on:
+  schedule:
+  - cron: "* 2 * * *"
 env:
   abtc_application_number: ${{ secrets.ABTC_APPLICATION_NUMBER }}
   gmail_password: ${{ secrets.GMAIL_PASSWORD }}
