--- a/.github/workflows/check_apec_status.yml
+++ b/.github/workflows/check_apec_status.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: python -m pip install --upgrade pip selenium wheel
+        run: python -m pip install --upgrade pip selenium requests wheel
       - uses: nick-fields/retry@v2
         with:
           timeout_minutes: 1
