--- a/.github/workflows/check_apec_status.yml
+++ b/.github/workflows/check_apec_status.yml
@@ -1,7 +1,7 @@
 name: apec
 on:
   schedule:
-    - cron: '1 1/10 * * *'
+    - cron: '1 1,10 * * *'
 env:
   abtc_application_number: ${{ secrets.ABTC_APPLICATION_NUMBER }}
   gmail_password: ${{ secrets.GMAIL_PASSWORD }}
