--- a/.github/workflows/check_apec_status.yml
+++ b/.github/workflows/check_apec_status.yml
@@ -1,7 +1,6 @@
 name: apec
 on:
-  schedule:
-    - cron: '1 1,10 * * *'
+  workflow:
 env:
   abtc_application_number: ${{ secrets.ABTC_APPLICATION_NUMBER }}
   gmail_password: ${{ secrets.GMAIL_PASSWORD }}
